csbind/src/joltc.rs

extern "C" {
    pub fn JPH_ConstraintSettings_GetEnabled(settings: *mut JPH_ConstraintSettings) -> bool;
}
extern "C" {
    pub fn JPH_FixedConstraintSettings_SetEnabled(
        settings: *mut JPH_ConstraintSettings,
        value: bool,
    );
}
extern "C" {
    pub fn JPH_ConstraintSettings_GetConstraintPriority(
        settings: *mut JPH_ConstraintSettings,
    ) -> u32;
}
extern "C" {
    pub fn JPH_FixedConstraintSettings_SetConstraintPriority(
        settings: *mut JPH_ConstraintSettings,
        value: u32,
    );
}
extern "C" {
    pub fn JPH_ConstraintSettings_GetNumVelocityStepsOverride(
        settings: *mut JPH_ConstraintSettings,
    ) -> u32;
}
extern "C" {
    pub fn JPH_ConstraintSettings_SetNumVelocityStepsOverride(
        settings: *mut JPH_ConstraintSettings,
        value: u32,
    );
}
extern "C" {
    pub fn JPH_ConstraintSettings_GetNumPositionStepsOverride(
        settings: *mut JPH_ConstraintSettings,
    ) -> u32;
}
extern "C" {
    pub fn JPH_ConstraintSettings_SetNumPositionStepsOverride(
        settings: *mut JPH_ConstraintSettings,
        value: u32,
    );
}
extern "C" {
    pub fn JPH_ConstraintSettings_GetDrawConstraintSize(
        settings: *mut JPH_ConstraintSettings,
    ) -> f32;
}
extern "C" {
    pub fn JPH_ConstraintSettings_SetDrawConstraintSize(
        settings: *mut JPH_ConstraintSettings,
        value: f32,
    );
}
extern "C" {
    pub fn JPH_ConstraintSettings_GetUserData(settings: *mut JPH_ConstraintSettings) -> u64;
}
extern "C" {
    pub fn JPH_ConstraintSettings_SetUserData(settings: *mut JPH_ConstraintSettings, value: u64);
}
extern "C" {
    pub fn JPH_Constraint_GetConstraintSettings(
        constraint: *mut JPH_Constraint,
    ) -> *mut JPH_ConstraintSettings;
}
extern "C" {
    pub fn JPH_Constraint_GetType(constraint: *const JPH_Constraint) -> JPH_ConstraintType;
}
extern "C" {
    pub fn JPH_Constraint_GetSubType(constraint: *const JPH_Constraint) -> JPH_ConstraintSubType;
}
extern "C" {
    pub fn JPH_Constraint_GetConstraintPriority(constraint: *const JPH_Constraint) -> u32;
}
extern "C" {
    pub fn JPH_Constraint_SetConstraintPriority(constraint: *mut JPH_Constraint, priority: u32);
}
extern "C" {
    pub fn JPH_Constraint_GetEnabled(constraint: *mut JPH_Constraint) -> bool;
}
extern "C" {
    pub fn JPH_Constraint_SetEnabled(constraint: *mut JPH_Constraint, enabled: bool);
}
extern "C" {
    pub fn JPH_Constraint_GetUserData(constraint: *const JPH_Constraint) -> u64;
}
extern "C" {
    pub fn JPH_Constraint_SetUserData(constraint: *mut JPH_Constraint, userData: u64);
}
extern "C" {
    pub fn JPH_Constraint_NotifyShapeChanged(
        constraint: *mut JPH_Constraint,
        bodyID: JPH_BodyID,
        deltaCOM: *mut JPH_Vec3,
    );
}
extern "C" {
    pub fn JPH_Constraint_Destroy(constraint: *mut JPH_Constraint);
}
extern "C" {
    pub fn JPH_FixedConstraintSettings_Create() -> *mut JPH_FixedConstraintSettings;
}
extern "C" {
    pub fn JPH_FixedConstraintSettings_GetSpace(
        settings: *mut JPH_FixedConstraintSettings,
    ) -> JPH_ConstraintSpace;
}
extern "C" {
    pub fn JPH_FixedConstraintSettings_SetSpace(
        settings: *mut JPH_FixedConstraintSettings,
        space: JPH_ConstraintSpace,
    );
}
extern "C" {
    pub fn JPH_FixedConstraintSettings_GetAutoDetectPoint(
        settings: *mut JPH_FixedConstraintSettings,
    ) -> bool;
}
extern "C" {
    pub fn JPH_FixedConstraintSettings_SetAutoDetectPoint(
        settings: *mut JPH_FixedConstraintSettings,
        value: bool,
    );
}
extern "C" {
    pub fn JPH_FixedConstraintSettings_GetPoint1(
        settings: *mut JPH_FixedConstraintSettings,
        result: *mut JPH_RVec3,
    );
}
extern "C" {
    pub fn JPH_FixedConstraintSettings_SetPoint1(
        settings: *mut JPH_FixedConstraintSettings,
        value: *const JPH_RVec3,
    );
}
extern "C" {
    pub fn JPH_FixedConstraintSettings_GetAxisX1(
        settings: *mut JPH_FixedConstraintSettings,
        result: *mut JPH_Vec3,
    );
}
extern "C" {
    pub fn JPH_FixedConstraintSettings_SetAxisX1(
        settings: *mut JPH_FixedConstraintSettings,
        value: *const JPH_Vec3,
    );
}
extern "C" {
    pub fn JPH_FixedConstraintSettings_GetAxisY1(
        settings: *mut JPH_FixedConstraintSettings,
        result: *mut JPH_Vec3,
    );
}
extern "C" {
    pub fn JPH_FixedConstraintSettings_SetAxisY1(
        settings: *mut JPH_FixedConstraintSettings,
        value: *const JPH_Vec3,
    );
}
extern "C" {
    pub fn JPH_FixedConstraintSettings_GetPoint2(
        settings: *mut JPH_FixedConstraintSettings,
        result: *mut JPH_RVec3,
    );
}
extern "C" {
    pub fn JPH_FixedConstraintSettings_SetPoint2(
        settings: *mut JPH_FixedConstraintSettings,
        value: *const JPH_RVec3,
    );
}
extern "C" {
    pub fn JPH_FixedConstraintSettings_GetAxisX2(
        settings: *mut JPH_FixedConstraintSettings,
        result: *mut JPH_Vec3,
    );
}
extern "C" {
    pub fn JPH_FixedConstraintSettings_SetAxisX2(
        settings: *mut JPH_FixedConstraintSettings,
        value: *const JPH_Vec3,
    );
}
extern "C" {
    pub fn JPH_FixedConstraintSettings_GetAxisY2(
        settings: *mut JPH_FixedConstraintSettings,
        result: *mut JPH_Vec3,
    );
}
extern "C" {
    pub fn JPH_FixedConstraintSettings_SetAxisY2(
        settings: *mut JPH_FixedConstraintSettings,
        value: *const JPH_Vec3,
    );
}
extern "C" {
    pub fn JPH_FixedConstraintSettings_CreateConstraint(
        settings: *mut JPH_FixedConstraintSettings,
        body1: *mut JPH_Body,
        body2: *mut JPH_Body,
    ) -> *mut JPH_FixedConstraint;
}
extern "C" {
    pub fn JPH_FixedConstraint_GetTotalLambdaPosition(
        constraint: *const JPH_FixedConstraint,
        result: *mut JPH_Vec3,
    );
}
extern "C" {
    pub fn JPH_FixedConstraint_GetTotalLambdaRotation(
        constraint: *const JPH_FixedConstraint,
        result: *mut JPH_Vec3,
    );
}
extern "C" {
    pub fn JPH_DistanceConstraintSettings_Create() -> *mut JPH_DistanceConstraintSettings;
}
extern "C" {
    pub fn JPH_DistanceConstraintSettings_GetSpace(
        settings: *mut JPH_DistanceConstraintSettings,
    ) -> JPH_ConstraintSpace;
}
extern "C" {
    pub fn JPH_DistanceConstraintSettings_SetSpace(
        settings: *mut JPH_DistanceConstraintSettings,
        space: JPH_ConstraintSpace,
    );
}
extern "C" {
    pub fn JPH_DistanceConstraintSettings_GetPoint1(
        settings: *mut JPH_DistanceConstraintSettings,
        result: *mut JPH_RVec3,
    );
}
extern "C" {
    pub fn JPH_DistanceConstraintSettings_SetPoint1(
        settings: *mut JPH_DistanceConstraintSettings,
        value: *const JPH_RVec3,
    );
}
extern "C" {
    pub fn JPH_DistanceConstraintSettings_GetPoint2(
        settings: *mut JPH_DistanceConstraintSettings,
        result: *mut JPH_RVec3,
    );
}
extern "C" {
    pub fn JPH_DistanceConstraintSettings_SetPoint2(
        settings: *mut JPH_DistanceConstraintSettings,
        value: *const JPH_RVec3,
    );
}
extern "C" {
    pub fn JPH_DistanceConstraintSettings_CreateConstraint(
        settings: *mut JPH_DistanceConstraintSettings,
        body1: *mut JPH_Body,
        body2: *mut JPH_Body,
    ) -> *mut JPH_DistanceConstraint;
}
extern "C" {
    pub fn JPH_DistanceConstraint_SetDistance(
        constraint: *mut JPH_DistanceConstraint,
        minDistance: f32,
        maxDistance: f32,
    );
}
extern "C" {
    pub fn JPH_DistanceConstraint_GetMinDistance(constraint: *mut JPH_DistanceConstraint) -> f32;
}
extern "C" {
    pub fn JPH_DistanceConstraint_GetMaxDistance(constraint: *mut JPH_DistanceConstraint) -> f32;
}
extern "C" {
    pub fn JPH_DistanceConstraint_GetLimitsSpringSettings(
        constraint: *mut JPH_DistanceConstraint,
        result: *mut JPH_SpringSettings,
    );
}
extern "C" {
    pub fn JPH_DistanceConstraint_SetLimitsSpringSettings(
        constraint: *mut JPH_DistanceConstraint,
        settings: *mut JPH_SpringSettings,
    );
}
extern "C" {
    pub fn JPH_DistanceConstraint_GetTotalLambdaPosition(
        constraint: *const JPH_DistanceConstraint,
    ) -> f32;
}
extern "C" {
    pub fn JPH_PointConstraintSettings_Create() -> *mut JPH_PointConstraintSettings;
}
extern "C" {
    pub fn JPH_PointConstraintSettings_GetSpace(
        settings: *mut JPH_PointConstraintSettings,
    ) -> JPH_ConstraintSpace;
}
extern "C" {
    pub fn JPH_PointConstraintSettings_SetSpace(
        settings: *mut JPH_PointConstraintSettings,
        space: JPH_ConstraintSpace,
    );
}
extern "C" {
    pub fn JPH_PointConstraintSettings_GetPoint1(
        settings: *mut JPH_PointConstraintSettings,
        result: *mut JPH_RVec3,
    );
}
extern "C" {
    pub fn JPH_PointConstraintSettings_SetPoint1(
        settings: *mut JPH_PointConstraintSettings,
        value: *const JPH_RVec3,
    );
}
extern "C" {
    pub fn JPH_PointConstraintSettings_GetPoint2(
        settings: *mut JPH_PointConstraintSettings,
        result: *mut JPH_RVec3,
    );
}
extern "C" {
    pub fn JPH_PointConstraintSettings_SetPoint2(
        settings: *mut JPH_PointConstraintSettings,
        value: *const JPH_RVec3,
    );
}
extern "C" {
    pub fn JPH_PointConstraintSettings_CreateConstraint(
        settings: *mut JPH_PointConstraintSettings,
        body1: *mut JPH_Body,
        body2: *mut JPH_Body,
    ) -> *mut JPH_PointConstraint;
}
extern "C" {
    pub fn JPH_PointConstraint_SetPoint1(
        constraint: *mut JPH_PointConstraint,
        space: JPH_ConstraintSpace,
        value: *mut JPH_RVec3,
    );
}
extern "C" {
    pub fn JPH_PointConstraint_SetPoint2(
        constraint: *mut JPH_PointConstraint,
        space: JPH_ConstraintSpace,
        value: *mut JPH_RVec3,
    );
}
extern "C" {
    pub fn JPH_PointConstraint_GetTotalLambdaPosition(
        constraint: *const JPH_PointConstraint,
        result: *mut JPH_Vec3,
    );
}
extern "C" {
    pub fn JPH_HingeConstraintSettings_Create() -> *mut JPH_HingeConstraintSettings;
}
extern "C" {
    pub fn JPH_HingeConstraintSettings_GetPoint1(
        settings: *mut JPH_HingeConstraintSettings,
        result: *mut JPH_RVec3,
    );
}
extern "C" {
    pub fn JPH_HingeConstraintSettings_SetPoint1(
        settings: *mut JPH_HingeConstraintSettings,
        value: *const JPH_RVec3,
    );
}
extern "C" {
    pub fn JPH_HingeConstraintSettings_GetPoint2(
        settings: *mut JPH_HingeConstraintSettings,
        result: *mut JPH_RVec3,
    );
}
extern "C" {
    pub fn JPH_HingeConstraintSettings_SetPoint2(
        settings: *mut JPH_HingeConstraintSettings,
        value: *const JPH_RVec3,
    );
}
extern "C" {
    pub fn JPH_HingeConstraintSettings_SetHingeAxis1(
        settings: *mut JPH_HingeConstraintSettings,
        value: *const JPH_Vec3,
    );
}
extern "C" {
    pub fn JPH_HingeConstraintSettings_GetHingeAxis1(
        settings: *mut JPH_HingeConstraintSettings,
        result: *mut JPH_Vec3,
    );
}
extern "C" {
    pub fn JPH_HingeConstraintSettings_SetNormalAxis1(
        settings: *mut JPH_HingeConstraintSettings,
        value: *const JPH_Vec3,
    );
}
extern "C" {
    pub fn JPH_HingeConstraintSettings_GetNormalAxis1(
        settings: *mut JPH_HingeConstraintSettings,
        result: *mut JPH_Vec3,
    );
}
extern "C" {
    pub fn JPH_HingeConstraintSettings_SetHingeAxis2(
        settings: *mut JPH_HingeConstraintSettings,
        value: *const JPH_Vec3,
    );
}
extern "C" {
    pub fn JPH_HingeConstraintSettings_GetHingeAxis2(
        settings: *mut JPH_HingeConstraintSettings,
        result: *mut JPH_Vec3,
    );
}
extern "C" {
    pub fn JPH_HingeConstraintSettings_SetNormalAxis2(
        settings: *mut JPH_HingeConstraintSettings,
        value: *const JPH_Vec3,
    );
}
extern "C" {
    pub fn JPH_HingeConstraintSettings_GetNormalAxis2(
        settings: *mut JPH_HingeConstraintSettings,
        result: *mut JPH_Vec3,
    );
}
